@@ -1,6 +1,7 @@
 v3.1.1 (2020.01.xx)
   - (Windows) Use a BELOW_NORMAL thread priority for the background task scheduler
   - Remove obsolete MPEG-TS packet filtering implementation when streaming via HTTP
+  - Remove "Use Original Air Date timestamp for Recorded TV programs" setting
   - Fix bug preventing recording resume position from being set if recording is in-progress
 
 v3.1.0 (2019.12.23)
